# theta-coffee-lab

./: .gitignore  .replit  README.md  app.py  data_init.py  pyproject.toml  style.css  ui_utils.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted--KeyError-Category-not-in-index-Traceback-File-home-runner-workspace-pythonlibs-lib-pytho-1743701568024.txt  Pasted-1-Trang-Home-Dashboard-gi-m-s-t-t-ng-quan-B-l-c-th-i-gian-Dropdown-H-m-nay-7-ng-y-30-ng-1743617687561.txt
data/: inventory.csv  inventory_transactions.csv  operational_costs.csv  product_recipe.csv  products.csv  sales.csv
pages/: 1_dashboard.py  2_order.py  3_inventory.py  4_product.py  5_financial.py  5_financial.py.bak  6_map.py  6_settings.py  7_map.py  7_map.py.bak  7_settings.py  dashboard.py  financial.py  inventory.py  order.py  settings.py
replit_agent/: architecture.md
