[tool.poetry]
name = "theta-coffee-lab-management-system"
version = "1.0.0"
description = "A comprehensive cafe management system for Theta Coffee Lab"
authors = ["Replit Developer"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.29"
pandas = "^2.1"
numpy = "^1.24"
plotly = "^5.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"